# smartnest-ai

./: .gitignore  PROJECT_GUIDE.md  README.md  RUN_PROJECT_EASY.md  docker-compose.yml  nds (1).py  pyproject.toml
Complain_Management_System-main/: UI.html  main.py  pyproject.toml  resident_directory.md
Digital Voting Sysytem/Digital_Voting_Sys-main/: main.py  pyproject.toml  society-voting-system.html
Facial Detection System/Facial_Detection-master/: Simple_facerec.py  main.py  pyproject.toml  requirements.txt
Vehicle speed detection system/: main.py  pyproject.toml  tracker.py
app/: __init__.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: __init__.py  session.py
app/models/: __init__.py  cnic_records.py  parking_records.py  user.py
app/routes/: __init__.py  auth_routes.py  parking_routes.py
app/schemas/: __init__.py  parking.py
app/services/: __init__.py  cnic_ocr.py  detection.py  main.py  ocr.py  parking_service.py  video_processing.py
config/: settings.toml
scripts/: create_user.py
